ajuste imagen en Home

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       >
 
       <div class="contenedor-portada">
-        <img class="portada portada2 text-center" src="/img/header.jpg" alt="">
+        <img class="portada portada2 text-center" src="./img/header.jpg" alt="">
       </div>
      
         1
