--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       </div>
 
 <footer class="bg-dark p-3 mt-5">
-    <p class="text-center m-0 text-muted">JS</p>
+    <p class="text-center m-0 text-muted">PEPPER & SALT - 2023</p>
 </footer>
 
     <script
