--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </li>
       </ul>
     </header>
-    <h1 class="h1 mx-6  pt-3 pb-4 titulo2 text-center">Pepper ´N Salt</h1>
+    <h1 class="h1 mx-6  pt-3 pb-4 titulo2 text-center">Pepper & Salt</h1>
     <div class="alert container position-sticky top-0 alert-primary hide" role="alert">
       Producto Añadido al carrito!
       </div>
