--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
       </div>
 
       <div class="col d-flex justify-content-center mb-4">
-        <div class="card shadow mb-1 bg-dark rounded" style="width: 30rem;">
-            <img src="./img/grabanzos-con-atun.jpg" class="card-img-top" alt="...">
+        <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
+            <img src="./img/grabanzos-con-atun.jpg" class="card-img-top garbanzos" alt="...">
             <div class="card-body  ">
               <h5 class="card-title pt-2 text-center">Card title</h5>
               <p class="card-text text-white-50 description">Garbanzos con Atún</p>
