corrección en footer

--- a/index.html
+++ b/index.html
@@ -256,10 +256,12 @@
       
       <div class="contenedor-portada">
       </div>
+    <div class="footer-wrapper">
+        <footer class="bg-dark p-3 mt-5">
+          <p class="text-center m-0 text-muted">PEPPER & SALT - 2023</p>
+        </footer>
+    </div>
 
-<footer class="bg-dark p-3 mt-5">
-    <p class="text-center m-0 text-muted">PEPPER & SALT - 2023</p>
-</footer>
 
     <script
       src="https://code.jquery.com/jquery-3.6.1.js"
