ajustes título y párrafos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             role="tab"
             aria-controls="pills-home"
             aria-selected="true"
-            >Home</a
+            >Inicio</a
           >
         </li>
         <li class="nav-item" role="presentation">
@@ -79,8 +79,9 @@
         aria-labelledby="pills-home-tab"
         tabindex="0"
       >
-
+      <p class="introduccion">Bienvenido a la página de inicio de Pepper & Salt. Somos un restaurant con reparto en el área de microcentro. Ordene su comida y la entregaremos en aproximadamente 30 minutos. </p> <br>
       <div class="contenedor-portada">
+        
         <img class="portada portada2 text-center" src="./img/header.jpg" alt="">
       </div>
      
